--- a/cfg/uwsgi.yaml
+++ b/cfg/uwsgi.yaml
@@ -2,10 +2,10 @@ uwsgi:
     socket: localhost:4050
     uid: odin
     gid: odin
+    logfile-chown: odin
     chdir: /var/www/td-odin.ru
     pythonpath: /var/www/td-odin.ru
     module: tdodin
     callable: app
     master: 1
     worker: 2
-    logto: /var/www/td-odin.ru/uwsgi.log
