--- a/tdodin/app/tdodin.cfg
+++ b/tdodin/app/tdodin.cfg
@@ -1,4 +1,4 @@
 DB_NAME="gloreus_tdodin68"
-DB_USER="gloreus_tdodin68"
-DB_PASS="pJkSv8Foz4"
+DB_USER="root"
+DB_PASS="c300g"
 SECRET_KEY='\r\xa1\x05\xa5\x84sx\x1b\x83\xb4\x01\x10\x96zh\x83\x18\xfa\x80\x14\x21\xb2\x87\xf9\x03'
